--- a/charts/alertmanager-snmp-notifier/templates/ingress.yaml
+++ b/charts/alertmanager-snmp-notifier/templates/ingress.yaml
@@ -1,11 +1,6 @@
 {{- if .Values.ingress.enabled -}}
 {{- $fullName := include "alertmanager-snmp-notifier.fullname" . -}}
 {{- $svcPort := .Values.service.port -}}
-{{- if and .Values.ingress.className (not (semverCompare ">=1.18-0" .Capabilities.KubeVersion.GitVersion)) }}
-  {{- if not (hasKey .Values.ingress.annotations "kubernetes.io/ingress.class") }}
-  {{- $_ := set .Values.ingress.annotations "kubernetes.io/ingress.class" .Values.ingress.className}}
-  {{- end }}
-{{- end }}
 apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
@@ -19,6 +14,7 @@ metadata:
 spec:
   {{- if .Values.ingress.className }}
   ingressClassName: {{ .Values.ingress.className }}
+  {{- end }}
   {{- if .Values.ingress.tls }}
   tls:
     {{- range .Values.ingress.tls }}
@@ -43,8 +39,7 @@ spec:
               service:
                 name: {{ $fullName }}
                 port:
-                  number: {{ $svcPort }}s
-              {{- end }}
+                  number: {{ $svcPort }}
           {{- end }}
     {{- end }}
 {{- end }}
