--- a/charts/prometheus-smartctl-exporter/values.yaml
+++ b/charts/prometheus-smartctl-exporter/values.yaml
@@ -18,7 +18,7 @@ common:
     smartctl_location: /usr/sbin/smartctl
     collect_not_more_than_period: 120s
 
-extraArgs:
+extraArgs: {}
   # Add extra arguments to the smartctl exporter
   # smartctl.powermode-check: never
 
