[prometheus] Add option medium Memory on emptyDir volume
Signed-off-by: aldi.j <aldi.jayadi222@gmail.com>

--- a/charts/prometheus/values.yaml
+++ b/charts/prometheus/values.yaml
@@ -592,8 +592,10 @@ server:
     # volumeName: ""
 
   emptyDir:
-    ## Prometheus server emptyDir volume size limit
+    ## Prometheus server emptyDir volume
+    ## Configure size limit and medium memory
     ##
+    mediumMemory: false
     sizeLimit: ""
 
   ## Annotations to be added to Prometheus server pods
