--- a/charts/prometheus/templates/deploy.yaml
+++ b/charts/prometheus/templates/deploy.yaml
@@ -403,8 +403,13 @@ spec:
             claimName: {{ if .Values.server.persistentVolume.existingClaim }}{{ .Values.server.persistentVolume.existingClaim }}{{- else }}{{ template "prometheus.server.fullname" . }}{{- end }}
         {{- else }}
           emptyDir:
+          {{- if or .Values.server.emptyDir.sizeLimit .Values.server.emptyDir.mediumMemory }}
+          {{- if .Values.server.emptyDir.mediumMemory }}
+            medium: Memory
+          {{- end }}
           {{- if .Values.server.emptyDir.sizeLimit }}
             sizeLimit: {{ .Values.server.emptyDir.sizeLimit }}
+          {{- end }}
           {{- else }}
             {}
           {{- end -}}
