--- a/charts/prometheus/templates/deploy.yaml
+++ b/charts/prometheus/templates/deploy.yaml
@@ -403,9 +403,9 @@ spec:
             claimName: {{ if .Values.server.persistentVolume.existingClaim }}{{ .Values.server.persistentVolume.existingClaim }}{{- else }}{{ template "prometheus.server.fullname" . }}{{- end }}
         {{- else }}
           emptyDir:
-          {{- if or .Values.server.emptyDir.sizeLimit .Values.server.emptyDir.mediumMemory }}
-          {{- if .Values.server.emptyDir.mediumMemory }}
-            medium: Memory
+          {{- if or .Values.server.emptyDir.sizeLimit .Values.server.emptyDir.medium }}
+          {{- if .Values.server.emptyDir.medium }}
+            medium: {{ .Values.server.emptyDir.medium }}
           {{- end }}
           {{- if .Values.server.emptyDir.sizeLimit }}
             sizeLimit: {{ .Values.server.emptyDir.sizeLimit }}
