--- a/charts/prometheus/values.yaml
+++ b/charts/prometheus/values.yaml
@@ -593,9 +593,9 @@ server:
 
   emptyDir:
     ## Prometheus server emptyDir volume
-    ## Configure size limit and medium memory
+    ## Configure size limit and medium
     ##
-    mediumMemory: false
+    medium: ""
     sizeLimit: ""
 
   ## Annotations to be added to Prometheus server pods
