revert values change
Signed-off-by: AvivGuiser <avivguiser@gmail.com>

--- a/charts/prometheus-cloudwatch-exporter/values.yaml
+++ b/charts/prometheus-cloudwatch-exporter/values.yaml
@@ -211,7 +211,7 @@ prometheusRule:
   #        severity: critical
 
 ingress:
-  enabled: true
+  enabled: false
   annotations: {}
     # kubernetes.io/ingress.class: nginx
     # kubernetes.io/tls-acme: "true"
