--- a/charts/kube-prometheus-stack/templates/prometheus/rules-1.14/node-exporter.yaml
+++ b/charts/kube-prometheus-stack/templates/prometheus/rules-1.14/node-exporter.yaml
@@ -694,7 +694,7 @@ spec:
           '
         runbook_url: {{ .Values.defaultRules.runbookUrl }}/node/nodememoryhighutilization
         summary: Host is running out of memory.
-      expr: 100 - (node_memory_MemAvailable_bytes{job="node-exporter"} / node_memory_MemTotal_bytes{job="node-exporter"} * 100) > 90
+      expr: 100 - ((node_memory_Cached_bytes{job="node-exporter"} + node_memory_MemAvailable_bytes{job="node-exporter"}) / node_memory_MemTotal_bytes{job="node-exporter"} * 100) > 90
       for: {{ dig "NodeMemoryHighUtilization" "for" "15m" .Values.customRules }}
       {{- with .Values.defaultRules.keepFiringFor }}
       keep_firing_for: "{{ . }}"
