[ci] Exclude major version bumps from auto merge
Signed-off-by: Jan-Otto Kröpke <mail@jkroepke.de>

--- a/renovate.json
+++ b/renovate.json
@@ -93,14 +93,6 @@
       ]
     },
     {
-      "description": "Disable automerge for all major updates.",
-      "enabled": true,
-      "matchUpdateTypes": ["major"],
-      "automerge": false,
-      "platformAutomerge": false,
-      "labels": ["dependencies"]
-    },
-    {
       "description": "Opt-in to automerge updates charts.",
       "enabled": true,
       "matchFileNames": [
@@ -113,7 +105,11 @@
         "charts/prometheus-nats-exporter/**"
       ],
       "schedule": null,
-      "labels": ["dependencies", "dependencies/auto-merge"]
+      "labels": ["dependencies", "dependencies/auto-merge"],
+      "major": {
+        "description": "Exclude major version bumps from auto merge.",
+        "labels": ["dependencies"]
+      }
     },
     {
       "matchDatasources": [
