[kube-state-metrics] probes use named port
Signed-off-by: Pat Riehecky <riehecky@fnal.gov>

--- a/charts/kube-state-metrics/templates/deployment.yaml
+++ b/charts/kube-state-metrics/templates/deployment.yaml
@@ -183,7 +183,7 @@ spec:
             {{- end }}
             path: /healthz
             {{- if .Values.kubeRBACProxy.enabled }}
-            port: {{ .Values.service.port | default 8080 }}
+            port: "http"
             scheme: HTTPS
             {{- else }}
             port: {{ $servicePort }}
@@ -207,7 +207,7 @@ spec:
             {{- end }}
             path: /livez
             {{- if .Values.kubeRBACProxy.enabled }}
-            port: {{ .Values.service.port | default 8080 }}
+            port: "http"
             scheme: HTTPS
             {{- else }}
             port: {{ $servicePort }}
