--- a/charts/kube-state-metrics/templates/service.yaml
+++ b/charts/kube-state-metrics/templates/service.yaml
@@ -25,12 +25,12 @@ spec:
   {{- if ( and (eq .Values.service.type "NodePort" ) (not (empty .Values.service.nodePort)) ) }}
     nodePort: {{ .Values.service.nodePort }}
   {{- end }}
-    targetPort: {{ .Values.service.port | default 8080}}
+    targetPort: "http"
   {{ if .Values.selfMonitor.enabled }}
   - name: "metrics"
     protocol: TCP
     port: {{ .Values.selfMonitor.telemetryPort | default 8081 }}
-    targetPort: {{ .Values.selfMonitor.telemetryPort | default 8081 }}
+    targetPort: "metrics"
   {{- if ( and (eq .Values.service.type "NodePort" ) (not (empty .Values.service.nodePort)) ) }}
     nodePort: {{ .Values.selfMonitor.telemetryNodePort }}
   {{- end }}
