--- a/charts/prometheus-pgbouncer-exporter/Chart.yaml
+++ b/charts/prometheus-pgbouncer-exporter/Chart.yaml
@@ -1,8 +1,9 @@
 apiVersion: v2
+# renovate: github-releases=prometheus-community/pgbouncer_exporter
 appVersion: "v0.10.2"
 description: A Helm chart for prometheus pgbouncer-exporter
 name: prometheus-pgbouncer-exporter
-version: 0.7.1
+version: 0.7.2
 home: https://github.com/prometheus-community/pgbouncer_exporter
 sources:
   - https://github.com/prometheus-community/pgbouncer_exporter
