[ci] renovate auto-merge: enable auto-merge for prometheus-to-sd and prometheus-consul-exporter
Signed-off-by: Jan-Otto Kröpke <mail@jkroepke.de>

--- a/renovate.json
+++ b/renovate.json
@@ -102,7 +102,9 @@
         "charts/prometheus-windows-exporter/**",
         "charts/jiralert/**",
         "charts/prom-label-proxy/**",
-        "charts/prometheus-nats-exporter/**"
+        "charts/prometheus-nats-exporter/**",
+        "charts/prometheus-to-sd/**",
+        "charts/prometheus-consul-exporter/**"
       ],
       "schedule": null,
       "labels": ["dependencies", "dependencies/auto-merge"],
