--- a/charts/prometheus-consul-exporter/Chart.yaml
+++ b/charts/prometheus-consul-exporter/Chart.yaml
@@ -1,4 +1,5 @@
 apiVersion: v2
+# renovate: docker=prom/consul-exporter
 appVersion: "v0.13.0"
 description: A Helm chart for the Prometheus Consul Exporter
 name: prometheus-consul-exporter
