--- a/charts/prometheus-to-sd/Chart.yaml
+++ b/charts/prometheus-to-sd/Chart.yaml
@@ -1,4 +1,5 @@
 apiVersion: v1
+# renovate: docker=gcr.io/google-containers/prometheus-to-sd
 appVersion: "v0.9.2"
 description: Scrape metrics stored in prometheus format and push them to the Stackdriver
 home: https://github.com/GoogleCloudPlatform/k8s-stackdriver/tree/master/prometheus-to-sd
