[ci] enable auto merge for prometheus-couchdb-exporter
Signed-off-by: Jan-Otto Kröpke <mail@jkroepke.de>

--- a/renovate.json
+++ b/renovate.json
@@ -104,7 +104,8 @@
         "charts/prom-label-proxy/**",
         "charts/prometheus-nats-exporter/**",
         "charts/prometheus-to-sd/**",
-        "charts/prometheus-consul-exporter/**"
+        "charts/prometheus-consul-exporter/**",
+        "charts/prometheus-couchdb-exporter/**"
       ],
       "schedule": null,
       "labels": ["dependencies", "dependencies/auto-merge"],
