Run ./hack/sync_prometheus_rules.sh
Signed-off-by: Dan Pock <self@danpock.me>

--- a/charts/kube-prometheus-stack/templates/prometheus/rules-1.14/general.rules.yaml
+++ b/charts/kube-prometheus-stack/templates/prometheus/rules-1.14/general.rules.yaml
@@ -61,17 +61,12 @@ spec:
 {{- if .Values.defaultRules.additionalRuleGroupAnnotations.general }}
 {{ toYaml .Values.defaultRules.additionalRuleGroupAnnotations.general | indent 8 }}
 {{- end }}
-        description: 'This is an alert meant to ensure that the entire alerting pipeline is functional.
-
-          This alert is always firing, therefore it should always be firing in Alertmanager
-
-          and always fire against a receiver. There are integrations with various notification
-
-          mechanisms that send a notification when this alert is not firing. For example the
-
-          "DeadMansSnitch" integration in PagerDuty.
-
-          '
+        description: |
+            This is an alert meant to ensure that the entire alerting pipeline is functional.
+            This alert is always firing, therefore it should always be firing in Alertmanager
+            and always fire against a receiver. There are integrations with various notification
+            mechanisms that send a notification when this alert is not firing. For example the
+            "DeadMansSnitch" integration in PagerDuty.
         runbook_url: {{ .Values.defaultRules.runbookUrl }}/general/watchdog
         summary: An alert that should always be firing to certify that Alertmanager is working properly.
       expr: vector(1)
@@ -95,19 +90,13 @@ spec:
 {{- if .Values.defaultRules.additionalRuleGroupAnnotations.general }}
 {{ toYaml .Values.defaultRules.additionalRuleGroupAnnotations.general | indent 8 }}
 {{- end }}
-        description: 'This is an alert that is used to inhibit info alerts.
-
-          By themselves, the info-level alerts are sometimes very noisy, but they are relevant when combined with
-
-          other alerts.
-
-          This alert fires whenever there''s a severity="info" alert, and stops firing when another alert with a
-
-          severity of ''warning'' or ''critical'' starts firing on the same namespace.
-
-          This alert should be routed to a null receiver and configured to inhibit alerts with severity="info".
-
-          '
+        description: |
+            This is an alert that is used to inhibit info alerts.
+            By themselves, the info-level alerts are sometimes very noisy, but they are relevant when combined with
+            other alerts.
+            This alert fires whenever there's a severity="info" alert, and stops firing when another alert with a
+            severity of 'warning' or 'critical' starts firing on the same namespace.
+            This alert should be routed to a null receiver and configured to inhibit alerts with severity="info".
         runbook_url: {{ .Values.defaultRules.runbookUrl }}/general/infoinhibitor
         summary: Info-level alert inhibition.
       expr: ALERTS{severity = "info"} == 1 unless on ({{ range $.Values.defaultRules.additionalAggregationLabels }}{{ . }},{{ end }}namespace) ALERTS{alertname != "InfoInhibitor", severity =~ "warning|critical", alertstate="firing"} == 1
