--- a/charts/kube-prometheus-stack/templates/prometheus/rules-1.14/node-exporter.yaml
+++ b/charts/kube-prometheus-stack/templates/prometheus/rules-1.14/node-exporter.yaml
@@ -593,9 +593,8 @@ spec:
 {{- if .Values.defaultRules.additionalRuleGroupAnnotations.nodeExporterAlerting }}
 {{ toYaml .Values.defaultRules.additionalRuleGroupAnnotations.nodeExporterAlerting | indent 8 }}
 {{- end }}
-        description: 'CPU usage at {{`{{`}} $labels.instance {{`}}`}} has been above 90% for the last 15 minutes, is currently at {{`{{`}} printf "%.2f" $value {{`}}`}}%.
-
-          '
+        description: |
+            CPU usage at {{`{{`}} $labels.instance {{`}}`}} has been above 90% for the last 15 minutes, is currently at {{`{{`}} printf "%.2f" $value {{`}}`}}%.
         runbook_url: {{ .Values.defaultRules.runbookUrl }}/node/nodecpuhighusage
         summary: High CPU usage.
       expr: sum without(mode) (avg without (cpu) (rate(node_cpu_seconds_total{job="node-exporter", mode!~"idle|iowait"}[2m]))) * 100 > 90
@@ -623,11 +622,9 @@ spec:
 {{- if .Values.defaultRules.additionalRuleGroupAnnotations.nodeExporterAlerting }}
 {{ toYaml .Values.defaultRules.additionalRuleGroupAnnotations.nodeExporterAlerting | indent 8 }}
 {{- end }}
-        description: 'System load per core at {{`{{`}} $labels.instance {{`}}`}} has been above 2 for the last 15 minutes, is currently at {{`{{`}} printf "%.2f" $value {{`}}`}}.
-
-          This might indicate this instance resources saturation and can cause it becoming unresponsive.
-
-          '
+        description: |
+            System load per core at {{`{{`}} $labels.instance {{`}}`}} has been above 2 for the last 15 minutes, is currently at {{`{{`}} printf "%.2f" $value {{`}}`}}.
+            This might indicate this instance resources saturation and can cause it becoming unresponsive.
         runbook_url: {{ .Values.defaultRules.runbookUrl }}/node/nodesystemsaturation
         summary: System saturated, load per core is very high.
       expr: |-
@@ -657,11 +654,9 @@ spec:
 {{- if .Values.defaultRules.additionalRuleGroupAnnotations.nodeExporterAlerting }}
 {{ toYaml .Values.defaultRules.additionalRuleGroupAnnotations.nodeExporterAlerting | indent 8 }}
 {{- end }}
-        description: 'Memory major pages are occurring at very high rate at {{`{{`}} $labels.instance {{`}}`}}, 500 major page faults per second for the last 15 minutes, is currently at {{`{{`}} printf "%.2f" $value {{`}}`}}.
-
-          Please check that there is enough memory available at this instance.
-
-          '
+        description: |
+            Memory major pages are occurring at very high rate at {{`{{`}} $labels.instance {{`}}`}}, 500 major page faults per second for the last 15 minutes, is currently at {{`{{`}} printf "%.2f" $value {{`}}`}}.
+            Please check that there is enough memory available at this instance.
         runbook_url: {{ .Values.defaultRules.runbookUrl }}/node/nodememorymajorpagesfaults
         summary: Memory major page faults are occurring at very high rate.
       expr: rate(node_vmstat_pgmajfault{job="node-exporter"}[5m]) > 500
@@ -689,9 +684,8 @@ spec:
 {{- if .Values.defaultRules.additionalRuleGroupAnnotations.nodeExporterAlerting }}
 {{ toYaml .Values.defaultRules.additionalRuleGroupAnnotations.nodeExporterAlerting | indent 8 }}
 {{- end }}
-        description: 'Memory is filling up at {{`{{`}} $labels.instance {{`}}`}}, has been above 90% for the last 15 minutes, is currently at {{`{{`}} printf "%.2f" $value {{`}}`}}%.
-
-          '
+        description: |
+            Memory is filling up at {{`{{`}} $labels.instance {{`}}`}}, has been above 90% for the last 15 minutes, is currently at {{`{{`}} printf "%.2f" $value {{`}}`}}%.
         runbook_url: {{ .Values.defaultRules.runbookUrl }}/node/nodememoryhighutilization
         summary: Host is running out of memory.
       expr: 100 - (node_memory_MemAvailable_bytes{job="node-exporter"} / node_memory_MemTotal_bytes{job="node-exporter"} * 100) > 90
@@ -719,11 +713,9 @@ spec:
 {{- if .Values.defaultRules.additionalRuleGroupAnnotations.nodeExporterAlerting }}
 {{ toYaml .Values.defaultRules.additionalRuleGroupAnnotations.nodeExporterAlerting | indent 8 }}
 {{- end }}
-        description: 'Disk IO queue (aqu-sq) is high on {{`{{`}} $labels.device {{`}}`}} at {{`{{`}} $labels.instance {{`}}`}}, has been above 10 for the last 30 minutes, is currently at {{`{{`}} printf "%.2f" $value {{`}}`}}.
-
-          This symptom might indicate disk saturation.
-
-          '
+        description: |
+            Disk IO queue (aqu-sq) is high on {{`{{`}} $labels.device {{`}}`}} at {{`{{`}} $labels.instance {{`}}`}}, has been above 10 for the last 30 minutes, is currently at {{`{{`}} printf "%.2f" $value {{`}}`}}.
+            This symptom might indicate disk saturation.
         runbook_url: {{ .Values.defaultRules.runbookUrl }}/node/nodediskiosaturation
         summary: Disk IO queue is high.
       expr: rate(node_disk_io_time_weighted_seconds_total{job="node-exporter", device=~"(/dev/)?(mmcblk.p.+|nvme.+|rbd.+|sd.+|vd.+|xvd.+|dm-.+|md.+|dasd.+)"}[5m]) > 10
