[alertmanager] Add configure emptyDir volume in Persistence
Signed-off-by: aldi.j <aldi.jayadi222@gmail.com>

--- a/charts/alertmanager/templates/statefulset.yaml
+++ b/charts/alertmanager/templates/statefulset.yaml
@@ -260,5 +260,15 @@ spec:
       {{- end }}
   {{- else }}
         - name: storage
-          emptyDir: {}
+          emptyDir:
+          {{- if or .Values.persistence.emptyDir.sizeLimit .Values.persistence.emptyDir.medium }}
+          {{- if .Values.persistence.emptyDir.medium }}
+            medium: {{ .Values.persistence.emptyDir.medium }}
+          {{- end }}
+          {{- if .Values.persistence.emptyDir.sizeLimit }}
+            sizeLimit: {{ .Values.persistence.emptyDir.sizeLimit }}
+          {{- end }}
+          {{- else }}
+            {}
+          {{- end -}}
   {{- end }}
