--- a/charts/alertmanager/values.yaml
+++ b/charts/alertmanager/values.yaml
@@ -265,7 +265,11 @@ podDisruptionBudget: {}
 command: []
 
 persistence:
+  ## If true, storage will create or use Persistence Volume
+  ## If false, storage will use emptyDir
+  ##
   enabled: true
+
   ## Persistent Volume Storage Class
   ## If defined, storageClassName: <storageClass>
   ## If set to "-", storageClassName: "", which disables dynamic provisioning
@@ -276,6 +280,13 @@ persistence:
   accessModes:
     - ReadWriteOnce
   size: 50Mi
+
+  ## Storage emptyDir volume
+  ## Configure size limit and medium
+  ##
+  emptyDir:
+    medium: ""
+    sizeLimit: ""
 
 configAnnotations: {}
   ## For example if you want to provide private data from a secret vault
