[kube-state-metrics] add ignoreProbePaths to kubeRBACProxy
This change add .Values.kubeRBACProxy.ignoreProbePaths to allow the kube-state-metrics readinessProbe and livenessProbe work properly when kubeRBACProxy is enabled

Signed-off-by: Hendrik Ferber <ferber@synyx.de>

--- a/charts/kube-state-metrics/values.yaml
+++ b/charts/kube-state-metrics/values.yaml
@@ -110,6 +110,10 @@ kubeRBACProxy:
     sha: ""
     pullPolicy: IfNotPresent
 
+  # This set --ignore-paths=/livez,/readyz to kubeRBACProxy container args
+  # to allow the pod probes working properly with kubeRBACProxy enabled.
+  ignoreProbePaths: true
+
   # List of additional cli arguments to configure kube-rbac-prxy
   # for example: --tls-cipher-suites, --log-file, etc.
   # all the possible args can be found here: https://github.com/brancz/kube-rbac-proxy#usage
