--- a/charts/prometheus/templates/deploy.yaml
+++ b/charts/prometheus/templates/deploy.yaml
@@ -1,26 +1,66 @@
-{{- if not .Values.server.statefulSet.enabled -}}
-apiVersion: {{ template "prometheus.deployment.apiVersion" . }}
-kind: Deployment
+apiVersion: apps/v1
+{{- if .Values.server.statefulSet.enabled }}
+kind: StatefulSet
 metadata:
-{{- if .Values.server.deploymentAnnotations }}
+  {{- if .Values.server.deploymentAnnotations }}
   annotations:
     {{ toYaml .Values.server.deploymentAnnotations | nindent 4 }}
-{{- end }}
+  {{- end }}
   labels:
     {{- include "prometheus.server.labels" . | nindent 4 }}
+    {{- with .Values.server.statefulSet.labels }}
+    {{- toYaml . | nindent 4 }}
+    {{- end }}
+{{- else if .Values.server.daemonSet.enabled }}
+kind: DaemonSet
+metadata:
+  labels:
+    {{- include "prometheus.server.labels" . | nindent 4 }}
+    {{- with .Values.server.daemonSet.labels }}
+    {{- toYaml . | nindent 4 }}
+    {{- end }}
+{{- else }}
+kind: Deployment
+metadata:
+  labels:
+    {{- include "prometheus.server.labels" . | nindent 4 }}
+  {{- with .Values.server.deploymentAnnotations }}
+  annotations:
+    {{- toYaml . | nindent 4 }}
+  {{- end }}
+{{- end }}
   name: {{ template "prometheus.server.fullname" . }}
   namespace: {{ include "prometheus.namespace" . }}
 spec:
+  {{- if .Values.server.statefulSet.enabled }}
+  {{- if semverCompare ">= 1.27.x" (include "prometheus.kubeVersion" .) }}
+  persistentVolumeClaimRetentionPolicy:
+    whenDeleted: {{ ternary "Delete" "Retain" .Values.server.statefulSet.pvcDeleteOnStsDelete }}
+    whenScaled: {{ ternary "Delete" "Retain" .Values.server.statefulSet.pvcDeleteOnStsScale }}
+  {{- end }}
+  podManagementPolicy: {{ .Values.server.statefulSet.podManagementPolicy }}
+  serviceName: {{ template "prometheus.server.fullname" . }}-headless
+  {{- with .Values.server.statefulSet.updateStrategy }}
+  updateStrategy:
+    {{- toYaml . | nindent 4 }}
+  {{- end }}
+  {{- else if .Values.server.daemonSet.enabled }}
+  {{- with .Values.server.daemonSet.updateStrategy }}
+  updateStrategy:
+    {{- toYaml . | nindent 4 }}
+  {{- end }}
+  {{- else }}
+  {{- with .Values.server.strategy }}
+  strategy:
+    {{- toYaml . | nindent 4 }}
+    {{ if eq .type "Recreate" }}rollingUpdate: null{{ end }}
+  {{- end }}
+  {{- end }}
   selector:
     matchLabels:
       {{- include "prometheus.server.matchLabels" . | nindent 6 }}
   replicas: {{ .Values.server.replicaCount }}
   revisionHistoryLimit: {{ .Values.server.revisionHistoryLimit }}
-  {{- if .Values.server.strategy }}
-  strategy:
-{{ toYaml .Values.server.strategy | trim | indent 4 }}
-    {{ if eq .Values.server.strategy.type "Recreate" }}rollingUpdate: null{{ end }}
-{{- end }}
   template:
     metadata:
     {{- if .Values.server.podAnnotations }}
@@ -397,6 +437,7 @@ spec:
 {{- if .Values.server.extraVolumes }}
 {{ toYaml .Values.server.extraVolumes | indent 8}}
 {{- end }}
+      {{- if not .Values.server.statefulSet.enabled }}
         - name: storage-volume
         {{- if .Values.server.persistentVolume.enabled }}
           persistentVolumeClaim:
@@ -414,4 +455,32 @@ spec:
             {}
           {{- end -}}
         {{- end -}}
-{{- end -}}
+      {{- end -}}
+  {{- if and .Values.server.statefulSet.enabled (not .Values.server.persistentVolume.enabled) }}
+  volumeClaimTemplates:
+    - apiVersion: v1
+      kind: PersistentVolumeClaim
+      metadata:
+        name: {{ .Values.server.persistentVolume.statefulSetNameOverride | default "storage-volume" }}
+        {{- if .Values.server.persistentVolume.annotations }}
+        annotations:
+{{ toYaml .Values.server.persistentVolume.annotations | indent 10 }}
+        {{- end }}
+        {{- if .Values.server.persistentVolume.labels }}
+        labels:
+{{ toYaml .Values.server.persistentVolume.labels | indent 10 }}
+        {{- end }}
+      spec:
+        accessModes:
+{{ toYaml .Values.server.persistentVolume.accessModes | indent 10 }}
+        resources:
+          requests:
+            storage: "{{ .Values.server.persistentVolume.size }}"
+      {{- if .Values.server.persistentVolume.storageClass }}
+      {{- if (eq "-" .Values.server.persistentVolume.storageClass) }}
+        storageClassName: ""
+      {{- else }}
+        storageClassName: "{{ .Values.server.persistentVolume.storageClass }}"
+      {{- end }}
+      {{- end }}
+  {{- end }}
