--- a/charts/prometheus/values.yaml
+++ b/charts/prometheus/values.yaml
@@ -659,8 +659,16 @@ server:
     pvcDeleteOnStsDelete: false
     pvcDeleteOnStsScale: false
 
+  daemonSet:
+    ## If true, use a daemonset instead of a deployment for pod management.
+    ## This allows to run prometheus agent on every node in the cluster.
+    ##
+    enabled: false
+    annotations: {}
+    labels: {}
+
   ## Prometheus server readiness and liveness probe initial delay and timeout
-  ## Ref: https://kubernetes.io/docs/tasks/configure-pod-container/configure-liveness-readiness-startup-probes/
+  ## Ref: https://kubernetes.io/docs/tasks/configure-pod-container/co^nfigure-liveness-readiness-startup-probes/
   ##
   tcpSocketProbeEnabled: false
   probeScheme: HTTP
