--- a/charts/prometheus/values.yaml
+++ b/charts/prometheus/values.yaml
@@ -668,7 +668,7 @@ server:
     labels: {}
 
   ## Prometheus server readiness and liveness probe initial delay and timeout
-  ## Ref: https://kubernetes.io/docs/tasks/configure-pod-container/co^nfigure-liveness-readiness-startup-probes/
+  ## Ref: https://kubernetes.io/docs/tasks/configure-pod-container/configure-liveness-readiness-startup-probes/
   ##
   tcpSocketProbeEnabled: false
   probeScheme: HTTP
