--- a/charts/alertmanager/values.yaml
+++ b/charts/alertmanager/values.yaml
@@ -281,12 +281,9 @@ persistence:
     - ReadWriteOnce
   size: 50Mi
 
-  ## Storage emptyDir volume
-  ## Configure size limit and medium
+  ## Configure emptyDir volume
   ##
-  emptyDir:
-    medium: ""
-    sizeLimit: ""
+  emptyDir: {}
 
 configAnnotations: {}
   ## For example if you want to provide private data from a secret vault
