--- a/charts/prometheus/templates/deploy.yaml
+++ b/charts/prometheus/templates/deploy.yaml
@@ -456,7 +456,7 @@ spec:
           {{- end -}}
         {{- end -}}
       {{- end -}}
-  {{- if and .Values.server.statefulSet.enabled (not .Values.server.persistentVolume.enabled) }}
+  {{- if and .Values.server.statefulSet.enabled .Values.server.persistentVolume.enabled }}
   volumeClaimTemplates:
     - apiVersion: v1
       kind: PersistentVolumeClaim
