--- a/charts/alertmanager/templates/statefulset.yaml
+++ b/charts/alertmanager/templates/statefulset.yaml
@@ -260,5 +260,10 @@ spec:
       {{- end }}
   {{- else }}
         - name: storage
+            {{- with .Values.persistence.emptyDir }}
+          emptyDir:
+            {{- toYaml . | nindent 12 }}
+            {{- else }}
           emptyDir: {}
+            {{- end -}}
   {{- end }}
