Update security context
Signed-off-by: zyue110026 <98426905+zyue110026@users.noreply.github.com>

--- a/charts/prometheus-conntrack-stats-exporter/values.yaml
+++ b/charts/prometheus-conntrack-stats-exporter/values.yaml
@@ -42,7 +42,11 @@ resources: {}
   #   memory: 15Mi
 
 securityContext:
-  privileged: true
+  runAsUser: 1000
+  runAsNonRoot: true
+  readOnlyRootFilesystem: true
+  allowPrivilegeEscalation: false
+  privileged: false
 
 serviceAccount:
   # Specifies whether a service account should be created
