--- a/charts/prometheus-nginx-exporter/values.yaml
+++ b/charts/prometheus-nginx-exporter/values.yaml
@@ -24,6 +24,7 @@ image:
   # if not set appVersion field from Chart.yaml is used
   tag: ""
 
+imagePullSecrets: []
 nameOverride: ""
 fullnameOverride: ""
 
