--- a/charts/prometheus-conntrack-stats-exporter/values.yaml
+++ b/charts/prometheus-conntrack-stats-exporter/values.yaml
@@ -42,11 +42,14 @@ resources: {}
   #   memory: 15Mi
 
 securityContext:
-  runAsUser: 1000
-  runAsNonRoot: true
+  capabilities:
+    drop:
+      - ALL
+  privileged: true
   readOnlyRootFilesystem: true
-  allowPrivilegeEscalation: false
-  privileged: false
+  seccompProfile:
+    type: RuntimeDefault
+
 
 serviceAccount:
   # Specifies whether a service account should be created
