[prometheus-nats-exporter] add configuration option for imagePullSecrets
Signed-off-by: Lilly Sell <sell@b1-systems.de>

--- a/charts/prometheus-nats-exporter/values.yaml
+++ b/charts/prometheus-nats-exporter/values.yaml
@@ -8,6 +8,7 @@ image:
   repository: natsio/prometheus-nats-exporter
   tag: ""
   pullPolicy: IfNotPresent
+  imagePullSecrets: []
 
 service:
   labels: {}
