--- a/charts/prometheus-nginx-exporter/values.yaml
+++ b/charts/prometheus-nginx-exporter/values.yaml
@@ -80,6 +80,8 @@ serviceMonitor:
   enabled: false
   # Set the namespace the ServiceMonitor should be deployed
   namespace: ""
+  # Set the API version of the ServiceMonitor
+  apiVersion: "monitoring.coreos.com/v1"
   # Set how frequently Prometheus should scrape
   interval: 30s
   # Set path to nginx-exporter telemtery-path
