--- a/charts/prometheus-blackbox-exporter/templates/deployment.yaml
+++ b/charts/prometheus-blackbox-exporter/templates/deployment.yaml
@@ -21,7 +21,7 @@ spec:
   template:
     metadata:
       labels:
-        {{- include "prometheus-blackbox-exporter.selectorLabels" . | nindent 8 }}
+        {{- include "prometheus-blackbox-exporter.labels" . | nindent 8 }}
         {{- if .Values.commonLabels }}
 {{ toYaml .Values.commonLabels | indent 8 }}
         {{- end }}
