--- a/renovate.json
+++ b/renovate.json
@@ -66,7 +66,7 @@
         "*"
       ],
       "schedule": null,
-      "labels": ["dependencies", "dependencies/auto-merge"],
+      "labels": ["dependencies", "dependencies/auto-merge"]
     },
     {
       "enabled": true,
