--- a/renovate.json
+++ b/renovate.json
@@ -83,7 +83,7 @@
       "labels": ["dependencies", "dependencies/auto-merge"],
       "major": {
         "description": "Exclude major version bumps from auto merge.",
-        "labels": ["dependencies"]
+        "labels": ["dependencies"],
         "groupName": "{{ lookup (split packageFileDir '/') 1 }} dependency major updates"
       },
       "matchPackageNames": [
