- Collector values restructured based on https://github.com/kubernetes/kube-state-metrics/blob/main/internal/store/builder.go#L326-L360 - New grants added following   https://github.com/prometheus-community/helm-charts/pull/5357/files for rolebindings and serviceaccounts
Signed-off-by: Ramon Gordillo <rgordill@redhat.com>

--- a/charts/kube-state-metrics/values.yaml
+++ b/charts/kube-state-metrics/values.yaml
@@ -396,13 +396,17 @@ metricAnnotationsAllowList: []
 # By default, all available resources are enabled, comment out to disable.
 collectors:
   - certificatesigningrequests
+  # - clusterroles
   - configmaps
+  # - clusterrolebindings
   - cronjobs
   - daemonsets
   - deployments
   - endpoints
+  # - endpointslices
   - horizontalpodautoscalers
   - ingresses
+  # - ingressclasses
   - jobs
   - leases
   - limitranges
@@ -417,16 +421,15 @@ collectors:
   - replicasets
   - replicationcontrollers
   - resourcequotas
+  # - roles
+  # - rolebindings
   - secrets
   - services
+  # - serviceaccounts
   - statefulsets
   - storageclasses
   - validatingwebhookconfigurations
   - volumeattachments
-  # - ingressclasses
-  # - clusterrolebindings
-  # - clusterroles
-  # - roles
 
 # Enabling kubeconfig will pass the --kubeconfig argument to the container
 kubeconfig:
