--- a/charts/kube-state-metrics/templates/role.yaml
+++ b/charts/kube-state-metrics/templates/role.yaml
@@ -21,10 +21,22 @@ rules:
   - certificatesigningrequests
   verbs: ["list", "watch"]
 {{ end -}}
+{{ if has "clusterroles" $.Values.collectors }}
+- apiGroups: ["rbac.authorization.k8s.io"]
+  resources:
+  - clusterroles
+  verbs: ["list", "watch"]
+{{ end -}}
 {{ if has "configmaps" $.Values.collectors }}
 - apiGroups: [""]
   resources:
   - configmaps
+  verbs: ["list", "watch"]
+{{ end -}}
+{{ if has "clusterrolebindings" $.Values.collectors }}
+- apiGroups: ["rbac.authorization.k8s.io"]
+  resources:
+  - clusterrolebindings
   verbs: ["list", "watch"]
 {{ end -}}
 {{ if has "cronjobs" $.Values.collectors }}
@@ -69,6 +81,12 @@ rules:
   - ingresses
   verbs: ["list", "watch"]
 {{ end -}}
+{{ if has "ingressclasses" $.Values.collectors }}
+- apiGroups: ["networking.k8s.io"]
+  resources:
+  - ingressclasses
+  verbs: ["list", "watch"]
+{{ end -}}
 {{ if has "jobs" $.Values.collectors }}
 - apiGroups: ["batch"]
   resources:
@@ -103,30 +121,6 @@ rules:
 - apiGroups: ["networking.k8s.io"]
   resources:
   - networkpolicies
-  verbs: ["list", "watch"]
-{{ end -}}
-{{ if has "ingressclasses" $.Values.collectors }}
-- apiGroups: ["networking.k8s.io"]
-  resources:
-  - ingressclasses
-  verbs: ["list", "watch"]
-{{ end -}}
-{{ if has "clusterrolebindings" $.Values.collectors }}
-- apiGroups: ["rbac.authorization.k8s.io"]
-  resources:
-  - clusterrolebindings
-  verbs: ["list", "watch"]
-{{ end -}}
-{{ if has "clusterroles" $.Values.collectors }}
-- apiGroups: ["rbac.authorization.k8s.io"]
-  resources:
-  - clusterroles
-  verbs: ["list", "watch"]
-{{ end -}}
-{{ if has "roles" $.Values.collectors }}
-- apiGroups: ["rbac.authorization.k8s.io"]
-  resources:
-  - roles
   verbs: ["list", "watch"]
 {{ end -}}
 {{ if has "nodes" $.Values.collectors }}
@@ -177,6 +171,18 @@ rules:
   - resourcequotas
   verbs: ["list", "watch"]
 {{ end -}}
+{{ if has "roles" $.Values.collectors }}
+- apiGroups: ["rbac.authorization.k8s.io"]
+  resources:
+  - roles
+  verbs: ["list", "watch"]
+{{ end -}}
+{{ if has "rolebindings" $.Values.collectors }}
+- apiGroups: ["rbac.authorization.k8s.io"]
+  resources:
+  - rolebindings
+  verbs: ["list", "watch"]
+{{ end -}}
 {{ if has "secrets" $.Values.collectors }}
 - apiGroups: [""]
   resources:
@@ -193,6 +199,12 @@ rules:
 - apiGroups: ["apps"]
   resources:
   - statefulsets
+  verbs: ["list", "watch"]
+{{ end -}}
+{{ if has "serviceaccounts" $.Values.collectors }}
+- apiGroups: [""]
+  resources:
+  - serviceaccounts
   verbs: ["list", "watch"]
 {{ end -}}
 {{ if has "storageclasses" $.Values.collectors }}
