--- a/charts/prometheus-nginx-exporter/values.yaml
+++ b/charts/prometheus-nginx-exporter/values.yaml
@@ -130,3 +130,8 @@ extraVolumeMounts: []
 # This is only needed for the CI job so it should always be disabled.
 nginx:
   enabled: false
+
+# Configure the deployment strategy. The default is "RollingUpdate".
+# ref: https://kubernetes.io/docs/concepts/workloads/controllers/deployment/#strategy
+updateStrategy:
+  type: RollingUpdate
