[prometheus-nginx-exporter] Refix scrapeTimeout for serviceMonitor
Signed-off-by: aldi.j <aldi.jayadi222@gmail.com>

--- a/charts/prometheus-nginx-exporter/values.yaml
+++ b/charts/prometheus-nginx-exporter/values.yaml
@@ -89,7 +89,7 @@ serviceMonitor:
   # Set labels for the ServiceMonitor, use this to define your scrape label for Prometheus Operator
   additionalLabels: {}
   # Set timeout for scrape
-  timeout: 10s
+  scrapeTimeout: 10s
   # Set of labels to transfer on the Kubernetes Service onto the target.
   # targetLabels: []
   # metricRelabelings: []
