--- a/charts/prometheus-ipmi-exporter/Chart.yaml
+++ b/charts/prometheus-ipmi-exporter/Chart.yaml
@@ -2,7 +2,8 @@ apiVersion: v2
 name: prometheus-ipmi-exporter
 description: This is an IPMI exporter for Prometheus.
 type: application
-version: 0.6.0
+version: 0.6.1
+# renovate: github=prometheus-community/ipmi_exporter
 appVersion: "v1.10.0"
 keywords:
   - metrics
