[prometheus-nginx-exporter] Uncomment labeling options for service monitor
Signed-off-by: aldi.j <aldi.jayadi222@gmail.com>

--- a/charts/prometheus-nginx-exporter/values.yaml
+++ b/charts/prometheus-nginx-exporter/values.yaml
@@ -90,10 +90,12 @@ serviceMonitor:
   additionalLabels: {}
   # Set timeout for scrape
   scrapeTimeout: 10s
-  # Set of labels to transfer on the Kubernetes Service onto the target.
-  # targetLabels: []
-  # metricRelabelings: []
-  # relabelings: []
+  # Set which labels from the Kubernetes Service are transferred to the Prometheus target
+  targetLabels: []
+  # Set relabeling rules to apply to metrics after scraping but before ingestion
+  metricRelabelings: []
+  # Set relabeling rules to configure how scrape targets are discovered and labeled before scraping
+  relabelings: []
 
 nodeSelector: {}
 
