[prometheus-nginx-exporter] Add targetLabels in servicemonitor template
Signed-off-by: aldi.j <aldi.jayadi222@gmail.com>

--- a/charts/prometheus-nginx-exporter/templates/servicemonitor.yaml
+++ b/charts/prometheus-nginx-exporter/templates/servicemonitor.yaml
@@ -23,6 +23,10 @@ spec:
       {{- if .Values.serviceMonitor.honorLabels }}
       honorLabels: true
       {{- end }}
+      {{- if .Values.serviceMonitor.targetLabels }}
+      targetLabels:
+      {{ toYaml .Values.serviceMonitor.targetLabels | indent 4 }}
+      {{- end }}
       {{- if .Values.serviceMonitor.metricRelabelings }}
       metricRelabelings:
       {{ toYaml .Values.serviceMonitor.metricRelabelings | indent 4 }}
