[prometheus-nginx-exporter] Fix service monitor timeout field and uncomment labeling options (#5915)

--- a/charts/prometheus-nginx-exporter/values.yaml
+++ b/charts/prometheus-nginx-exporter/values.yaml
@@ -89,11 +89,13 @@ serviceMonitor:
   # Set labels for the ServiceMonitor, use this to define your scrape label for Prometheus Operator
   additionalLabels: {}
   # Set timeout for scrape
-  timeout: 10s
-  # Set of labels to transfer on the Kubernetes Service onto the target.
-  # targetLabels: []
-  # metricRelabelings: []
-  # relabelings: []
+  scrapeTimeout: 10s
+  # Set which labels from the Kubernetes Service are transferred to the Prometheus target
+  targetLabels: []
+  # Set relabeling rules to apply to metrics after scraping but before ingestion
+  metricRelabelings: []
+  # Set relabeling rules to configure how scrape targets are discovered and labeled before scraping
+  relabelings: []
 
 nodeSelector: {}
 
