--- a/charts/prometheus-windows-exporter/templates/daemonset.yaml
+++ b/charts/prometheus-windows-exporter/templates/daemonset.yaml
@@ -39,6 +39,9 @@ spec:
           image: {{ include "prometheus-windows-exporter.image" . }}
           command: [ "powershell" ]
           args: [ "New-NetFirewallRule", "-DisplayName", "'windows-exporter'", "-Direction", "inbound", "-Profile", "Any", "-Action", "Allow", "-LocalPort", "{{ .Values.service.port }}", "-Protocol", "TCP" ]
+          {{- with .Values.configureFirewall.resources }}
+          resources: {{ toYaml . | nindent  12 }}
+          {{- end }}
         {{- with .Values.extraInitContainers }}
         {{- toYaml . | nindent 8 }}
         {{- end }}
