--- a/charts/prometheus-windows-exporter/values.yaml
+++ b/charts/prometheus-windows-exporter/values.yaml
@@ -346,6 +346,13 @@ sidecarHostVolumeMounts: []
 #    readOnly: true|false
 #    mountPropagation: None|HostToContainer|Bidirectional
 
+## initContainer "configure-firewall" gets started by default
+##
+configureFirewall:
+  ## Set resources for the configure-firewall init container
+  ##
+  resources: {}
+
 ## Additional InitContainers to initialize the pod
 ##
 extraInitContainers: []
