prometheus-kafka-exporter add custom annotations to serviceAccount
Signed-off-by: Mati Kepa <mati@kepa.eu.org>

--- a/charts/prometheus-kafka-exporter/values.yaml
+++ b/charts/prometheus-kafka-exporter/values.yaml
@@ -53,6 +53,10 @@ serviceAccount:
   # The name of the ServiceAccount to use.
   # If not set and create is true, a name is generated using the fullname template
   name:
+  # This part is usefull when trying to use an SASL AWS IAM role when connecting to MSK
+  annotations: []
+  #   prometheus.io/scrape: "true"
+  #   prometheus.io/port: "9308"
 
 # Specifies environment variables to be added to the kafka-exporter container.
 # Environment variables can be defined as a list of either key-value pairs or
