--- a/charts/prometheus-kafka-exporter/templates/serviceaccount.yaml
+++ b/charts/prometheus-kafka-exporter/templates/serviceaccount.yaml
@@ -8,4 +8,8 @@ metadata:
     chart: {{ template "prometheus-kafka-exporter.chart" . }}
     release: "{{ .Release.Name }}"
     heritage: "{{ .Release.Service }}"
+  {{- if .Values.serviceAccount.annotations }}
+  annotations:
+    {{- toYaml .Values.serviceAccount.annotations | nindent 4 }}
+  {{- end }}
 {{- end -}}
