prometheus-kafka-exporter change annotations to aws ones
Signed-off-by: Mati Kepa <mati@kepa.eu.org>

--- a/charts/prometheus-kafka-exporter/values.yaml
+++ b/charts/prometheus-kafka-exporter/values.yaml
@@ -55,8 +55,10 @@ serviceAccount:
   name:
   # This part is usefull when trying to use an SASL AWS IAM role when connecting to MSK
   annotations: []
-  #   prometheus.io/scrape: "true"
-  #   prometheus.io/port: "9308"
+    # eks.amazonaws.com/role-arn: arn:aws:iam::1234567890:role-irsa
+    # eks.amazonaws.com/sts-regional-endpoints: "true"
+    # eks.amazonaws.com/audience: sts.amazonaws.com
+    # eks.amazonaws.com/token-expiration: "3600"
 
 # Specifies environment variables to be added to the kafka-exporter container.
 # Environment variables can be defined as a list of either key-value pairs or
