Support customization of timeout, period for NATS probes
Signed-off-by: Romil Vasani <romil.vasani93@gmail.com>

--- a/charts/prometheus-nats-exporter/templates/deployment.yaml
+++ b/charts/prometheus-nats-exporter/templates/deployment.yaml
@@ -70,10 +70,14 @@ spec:
             httpGet:
               path: /metrics
               port: http
+            timeoutSeconds: {{ .Values.service.livenessProbe.timeoutSeconds }}
+            periodSeconds: {{ .Values.service.livenessProbe.periodSeconds }}
           readinessProbe:
             httpGet:
               path: /metrics
               port: http
+            timeoutSeconds: {{ .Values.service.readinessProbe.timeoutSeconds }}
+            periodSeconds: {{ .Values.service.readinessProbe.timeoutSeconds }}
           resources:
 {{ toYaml .Values.resources | indent 12 }}
     {{- with .Values.nodeSelector }}
