--- a/charts/prometheus-nats-exporter/values.yaml
+++ b/charts/prometheus-nats-exporter/values.yaml
@@ -16,6 +16,12 @@ service:
   type: ClusterIP
   port: 80
   targetPort: 7777
+  livenessProbe:
+    timeoutSeconds: 1
+    periodSeconds: 10
+  readinessProbe:
+    timeoutSeconds: 1
+    periodSeconds: 10
 
 serviceMonitor:
   enabled: false
