[prom-label-proxy]: add `extraObjects`
Signed-off-by: Jonas Kanngießer <jonas.kanngiesser@outlook.de>

--- a/charts/prom-label-proxy/values.yaml
+++ b/charts/prom-label-proxy/values.yaml
@@ -263,3 +263,6 @@ kubeRBACProxy:
     # - mountPath: /etc/tls
     #   name: kube-rbac-proxy-tls
     #   readOnly: true
+
+# -- Extra manifests to deploy
+extraObjects: []
