refactor charts/prometheus-kafka-exporter/templates/serviceaccount.yaml
Co-authored-by: zeritti <47476160+zeritti@users.noreply.github.com>
Signed-off-by: Mati <36644582+matsonkepson@users.noreply.github.com>

--- a/charts/prometheus-kafka-exporter/templates/serviceaccount.yaml
+++ b/charts/prometheus-kafka-exporter/templates/serviceaccount.yaml
@@ -8,8 +8,8 @@ metadata:
     chart: {{ template "prometheus-kafka-exporter.chart" . }}
     release: "{{ .Release.Name }}"
     heritage: "{{ .Release.Service }}"
-  {{- if .Values.serviceAccount.annotations }}
+  {{- with .Values.serviceAccount.annotations }}
   annotations:
-    {{- toYaml .Values.serviceAccount.annotations | nindent 4 }}
+    {{- toYaml . | nindent 4 }}
   {{- end }}
 {{- end -}}
