--- a/charts/prometheus-kafka-exporter/values.yaml
+++ b/charts/prometheus-kafka-exporter/values.yaml
@@ -54,7 +54,7 @@ serviceAccount:
   # If not set and create is true, a name is generated using the fullname template
   name:
   # This part is usefull when trying to use an SASL AWS IAM role when connecting to MSK
-  annotations: []
+  annotations: {}
     # eks.amazonaws.com/role-arn: arn:aws:iam::1234567890:role-irsa
     # eks.amazonaws.com/sts-regional-endpoints: "true"
     # eks.amazonaws.com/audience: sts.amazonaws.com
