[prometheus-kafka-exporter]  add annotations to service account (#5970)

--- a/charts/prometheus-kafka-exporter/values.yaml
+++ b/charts/prometheus-kafka-exporter/values.yaml
@@ -53,6 +53,12 @@ serviceAccount:
   # The name of the ServiceAccount to use.
   # If not set and create is true, a name is generated using the fullname template
   name:
+  # This part is usefull when trying to use an SASL AWS IAM role when connecting to MSK
+  annotations: {}
+    # eks.amazonaws.com/role-arn: arn:aws:iam::1234567890:role-irsa
+    # eks.amazonaws.com/sts-regional-endpoints: "true"
+    # eks.amazonaws.com/audience: sts.amazonaws.com
+    # eks.amazonaws.com/token-expiration: "3600"
 
 # Specifies environment variables to be added to the kafka-exporter container.
 # Environment variables can be defined as a list of either key-value pairs or
