[prometheus-kafka-stack] sasl.mechanism not properly processed
Signed-off-by: Mateusz (Mati) Kepa <m.kepa@sportradar.com>

--- a/charts/prometheus-kafka-exporter/templates/deployment.yaml
+++ b/charts/prometheus-kafka-exporter/templates/deployment.yaml
@@ -63,6 +63,9 @@ spec:
           {{- if not .Values.sasl.handshake }}
             - '--sasl.handshake=false'
           {{- end }}
+          {{- if .Values.sasl.awsiam.enabled }}
+            - '--sasl.mechanism={{ .Values.sasl.awsiam.mechanism }}'
+          {{- end }}
           {{- if .Values.sasl.scram.enabled }}
             - '--sasl.username=$(SCRAM_USERNAME)'
             - '--sasl.password=$(SCRAM_PASSWORD)'
