--- a/charts/prometheus-kafka-exporter/values.yaml
+++ b/charts/prometheus-kafka-exporter/values.yaml
@@ -37,7 +37,7 @@ kafkaBrokerVersion:
 # Specifies log verbosity
 verbosity: 0
 
-# Sarama logging, usefull for awsiam debugging
+# Sarama logging, useful for awsiam debugging
 sarama:
   logEnabled: false
 
