add awsRegion charts/prometheus-kafka-exporter/values.yaml
Co-authored-by: zeritti <47476160+zeritti@users.noreply.github.com>
Signed-off-by: Mati <36644582+matikepa@users.noreply.github.com>

--- a/charts/prometheus-kafka-exporter/values.yaml
+++ b/charts/prometheus-kafka-exporter/values.yaml
@@ -192,6 +192,7 @@ sasl:
   # and most probably the tls.enabled to be set to true.
   awsiam:
     enabled: false
+    awsRegion: ""
     # The mechanism to use for SASL authentication.
     mechanism: "awsiam"
 
