add awsRegion charts/prometheus-kafka-exporter/templates/deployment.yaml
Co-authored-by: zeritti <47476160+zeritti@users.noreply.github.com>
Signed-off-by: Mati <36644582+matikepa@users.noreply.github.com>

--- a/charts/prometheus-kafka-exporter/templates/deployment.yaml
+++ b/charts/prometheus-kafka-exporter/templates/deployment.yaml
@@ -65,6 +65,11 @@ spec:
           {{- end }}
           {{- if .Values.sasl.awsiam.enabled }}
             - '--sasl.mechanism={{ .Values.sasl.awsiam.mechanism }}'
+          {{- if .Values.sasl.awsiam.enabled }}
+            - '--sasl.mechanism={{ .Values.sasl.awsiam.mechanism }}'
+            {{- if .Values.sasl.awsiam.awsRegion }}
+            - '--sasl.aws-region={{ .Values.sasl.awsiam.awsRegion }} 
+            {{- end }}
           {{- end }}
           {{- if .Values.sasl.scram.enabled }}
             - '--sasl.username=$(SCRAM_USERNAME)'
