[prometheus-kafka-exporter] add support for aws iam sasl  (#5974)
Signed-off-by: Mateusz (Mati) Kepa <m.kepa@sportradar.com>
Signed-off-by: Mati <36644582+matikepa@users.noreply.github.com>
Co-authored-by: Mateusz (Mati) Kepa <m.kepa@sportradar.com>
Co-authored-by: zeritti <47476160+zeritti@users.noreply.github.com>

--- a/charts/prometheus-kafka-exporter/values.yaml
+++ b/charts/prometheus-kafka-exporter/values.yaml
@@ -37,7 +37,7 @@ kafkaBrokerVersion:
 # Specifies log verbosity
 verbosity: 0
 
-# Sarama logging
+# Sarama logging, useful for awsiam debugging
 sarama:
   logEnabled: false
 
@@ -186,6 +186,15 @@ sasl:
 
     # or use an existing secret
     # secretName: <name of an existing secret>
+
+  # If enabled, the exporter will use AWS IAM authentication for SASL.
+  # Be aware that this requires the eks.amazonaws.com/role-arn annotation to be set on the ServiceAccount
+  # and most probably the tls.enabled to be set to true.
+  awsiam:
+    enabled: false
+    awsRegion: ""
+    # The mechanism to use for SASL authentication.
+    mechanism: "awsiam"
 
   kerberos:
     enabled: false
