[prometheus-kafka-stack] add kafka cluster custom server label to be visible in every prometheus metric
Signed-off-by: Mati Kepa <mati@kepa.eu.org>

--- a/charts/prometheus-kafka-exporter/templates/deployment.yaml
+++ b/charts/prometheus-kafka-exporter/templates/deployment.yaml
@@ -45,6 +45,9 @@ spec:
           {{- if .Values.kafkaBrokerVersion }}
             - '--kafka.version={{ .Values.kafkaBrokerVersion }}'
           {{- end }}
+          {{- if .Values.kafkaServerClusterLabel }}
+            - '--kafka.labels=cluster={{ .Values.kafkaServerClusterLabel }}'
+          {{- end }}
           {{- if .Values.tls.enabled }}
             - '--tls.enabled'
           {{- if .Values.tls.mountPath }}
