--- a/charts/prometheus-kafka-exporter/values.yaml
+++ b/charts/prometheus-kafka-exporter/values.yaml
@@ -32,7 +32,10 @@ kafkaServer:
   - kafka-server:9092
 
 # Specifies broker version to use, leave empty for default
-kafkaBrokerVersion:
+kafkaBrokerVersion: ""
+
+# Specifies custom label visible in Prometheus for the Kafka Server/Cluster
+kafkaServerClusterLabel: ""
 
 # Specifies log verbosity
 verbosity: 0
